--- a/C++OpenGL.vcxproj
+++ b/C++OpenGL.vcxproj
@@ -149,21 +149,23 @@
     <ClCompile Include="glad.c" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="stb_image.cpp" />
+    <ClCompile Include="VaoVboEbo.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="fragmentShader.frag" />
+    <None Include="lightShader.frag" />
+    <None Include="lightShader.vert" />
     <None Include="README.md" />
     <None Include="vertexShader.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
-    <ClInclude Include="Cube.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="Texture.h" />
+    <ClInclude Include="VaoVboEbo.h" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="brickTexture.jpg" />
     <Image Include="container.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
